# -demo

./: .env.example  README.md  app.js  index.html  pyproject.toml  requirements.txt  streamlit_app.py  styles.css
.github/workflows/: daily-stock-picks.yml  deploy-pages.yml
config/: symbols.txt
scripts/: bootstrap.sh  run_daily.sh
src/stock_gem_bot/: __init__.py  app.py  cli.py  config.py  models.py  notifier.py  providers.py  runner.py  screening.py  summarizer.py
